@@ -3,9 +3,11 @@ strongswan-4.0.6
 
 - IKEv2: Support for reauthentication when rekeying
 
+- IKEv2: Support for transport and (experimental!) BEET mode
+
 - fixed most (all?) bugs related to byte order
 
-- a lot of bugfixes
+- a lot of other bugfixes
 
 
 strongswan-4.0.5
